quase pronto o projeto

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
-OPENAI_API_KEY='sk-zm36E8kbjx23D_p-UVjS8xYekcIaPiWwdUK1nOK-MtT3BlbkFJHy27KYFb82nDkEHuuVVdbak257-ZsE9p32N-cwxzkA'
+SECRET_KEY=123
+SQLALCHEMY_DATABASE_URI=sqlite:///sqlite.db
+UPLOAD_URL=https://prod-upload-langchain.fly.dev
+
+# OPENAI_API_KEY='b1803f36-7a93-4e88-9b39-92380d26169c'
+
+PINECONE_API_KEY=b1803f36-7a93-4e88-9b39-92380d26169c
+PINECONE_ENV_NAME=us-east-1
+PINECONE_INDEX_NAME=docsgemini
